flux/apps/syncthing/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: syncthing
  labels:
    gateway-access: "true"
