flux/apps/syncthing/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: syncthing
  labels:
    app.kubernetes.io/name: syncthing
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: syncthing
  template:
    metadata:
      annotations:
        backup.velero.io/backup-volumes: data
      labels:
        app.kubernetes.io/name: syncthing
    spec:
      containers:
        - name: syncthing
          image: syncthing/syncthing
          ports:
            - containerPort: 8384
              name: ui
            - containerPort: 22000
              name: sync
          resources:
            limits:
              memory: 1024Mi
            requests:
              cpu: 100m
              memory: 1024Mi
          volumeMounts:
            - mountPath: /var/syncthing
              name: data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: syncthing
