flux/apps/syncthing/routes.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  labels:
    app.kubernetes.io/name: syncthing
  name: syncthing
spec:
  parentRefs:
    - name: gateway
      namespace: ingress
      sectionName: https
  hostnames:
    - syncthing.stehessel.org
  rules:
    - backendRefs:
        - name: syncthing
          namespace: syncthing
          port: 8384
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: syncthing
  labels:
    app.kubernetes.io/name: syncthing
spec:
  parentRefs:
    - name: gateway
      namespace: ingress
      sectionName: syncthing-tcp
  rules:
    - backendRefs:
        - name: syncthing
          namespace: syncthing
          port: 22000
